# strongswan

./: configure.ac
src/libcharon/: Makefile.am
src/libcharon/config/: child_cfg.c  child_cfg.h
src/libcharon/kernel/: kernel_ipsec.h
src/libcharon/plugins/kernel_cheetah/: Makefile.am  Makefile.am.protobuf_trial  fpm.pb-c.h  ipsec.pb-c.c  kernel_cheetah_ipsec.c.bak  kernel_cheetah_ipsec.h.bak  kernel_cheetah_plugin.c  kernel_cheetah_plugin.h  kernel_netlink_ipsec.c  nano_server.c  nanomsg_transport.pb-c.c  nanomsg_transport.pb-c.h  nanoserver.pb-c.c  nanoserver.pb-c.h  neighbor_provision.pb-c.c  neighbor_provision.pb-c.h  qpb.pb-c.c  qpb.pb-c.h
src/libcharon/plugins/kernel_libipsec_cheetah/: Makefile.am  ipsec.pb-c.h  kernel_libipsec_cheetah_ipsec.c  kernel_libipsec_cheetah_ipsec.h  kernel_libipsec_cheetah_plugin.c  kernel_libipsec_cheetah_plugin.h  kernel_libipsec_cheetah_router.c  kernel_libipsec_cheetah_router.h  qpb.pb-c.h
src/libcharon/plugins/kernel_netlink/: Makefile.am  fpm.pb-c.c  fpm.pb-c.h  ipsec.pb-c.c  ipsec.pb-c.h  kernel_netlink_ipsec.c  kernel_netlink_net.c  nano_server.c  nano_server.h
src/libcharon/plugins/kernel_pfkey/: kernel_pfkey_ipsec.c
src/libcharon/plugins/stroke/: stroke_config.c  stroke_socket.c
src/libcharon/plugins/vici/: vici_config.c
src/libcharon/sa/: child_sa.c  shunt_manager.c
src/libcharon/sa/ikev2/authenticators/: pubkey_authenticator.c
src/starter/: args.c  confread.c  confread.h  keywords.h.in  keywords.txt  starterstroke.c
src/stroke/: stroke.c  stroke_msg.h
testing/hosts/default/etc/: strongswan.conf.testing
testing/tests/swanctl/net2net-ed25519/hosts/moon/etc/: strongswan.conf
testing/tests/swanctl/rw-multi-ciphers-ikev1/hosts/carol/etc/: strongswan.conf
testing/tests/swanctl/rw-multi-ciphers-ikev1/hosts/dave/etc/: strongswan.conf
testing/tests/swanctl/rw-multi-ciphers-ikev1/hosts/moon/etc/: strongswan.conf
testing/tests/swanctl/rw-psk-ikev1/hosts/dave/etc/: strongswan.conf
testing/tests/swanctl/rw-psk-ikev1/hosts/moon/etc/: strongswan.conf
(+59 files in other folders)
